Atualizei a parte sobre

--- a/index.html
+++ b/index.html
@@ -85,22 +85,19 @@
                 <div class="about-text">
                     <h3>Especialista em Direito Previdenciário</h3>
                     <p>
-                        Advogada especialista em Direito Previdenciario com mais de 10 anos de experiencia.
-                        Dedica-se a defender os direitos dos segurados e a garantir que todos tenham acesso
-                        aos benefícios previdenciarios aos quais possuem direito. Com um profundo
-                        conhecimento das leis, regulamentos e pratica previdenciaria, ela proporciona um
-                        atendimento personalizado e eficiente, orientando os clientes em cada etapa do
-                        processo.
+                        Advogada com mais de 10 anos de experiência em Direito Previdenciário, dedicada à defesa dos segurados
+                        e à garantia de acesso aos benefícios a que fazem jus. Com amplo conhecimento das leis e regulamentos da área, 
+                        oferece um atendimento personalizado, claro e eficiente, acompanhando cada etapa do processo com atenção e segurança.
+
 
 
                     <p>
-                        Dedica sua carreira exclusivamente ao atendimento de segurados do INSS, 
-                        ajudando milhares de pessoas a conquistarem seus direitos previdenciários 
-                        com eficiência e humanização.
+                        Ao longo da carreira, atuou no atendimento a segurados do INSS, auxiliando pessoas 
+                        na conquista de seus direitos com profissionalismo, eficiência e sensibilidade humana.
                     </p>
                     <p>
-                        Atua em todo território nacional, oferecendo atendimento presencial e online, 
-                        sempre com foco na excelência e na satisfação de seus clientes.
+                        Atende em todo o território nacional, de forma presencial e online, sempre com foco na 
+                        excelência e na plena satisfação de seus clientes.
                     </p>
                     
                     <div class="qualifications">
@@ -231,7 +228,7 @@
                     </div>
                     <h3>Horário de Atendimento</h3>
                     <p>Segunda a Sexta: 8:00 - 18:00</p>
-                    <p>Sabado e Domingo: Plantão via WhatsApp</p>
+                    <p>Sábado e Domingo: Plantão via WhatsApp</p>
                 </div>
                 
                 <div class="info-card">
@@ -347,8 +344,7 @@
         <div class="footer-legal">
             <p>Este site não oferece serviços jurídicos automatizados nem substitui a consulta com um advogado qualificado. 
             As informações apresentadas têm caráter meramente informativo. Para análise específica do seu caso, 
-            é necessário agendamento de consulta com a Dra. Jéssica Maximo. Valores de honorários serão informados 
-            após análise inicial do caso.</p>
+            é necessário agendamento de consulta com a Dra. Jéssica Maximo.</p>
         </div>
     </div>
 </footer>
